Add python multiprocessing function

--- a/dotMatrix.ipynb
+++ b/dotMatrix.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "dotMatrix.ipynb",
+      "name": "Untitled",
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": []
@@ -32,11 +32,11 @@
       "metadata": {
         "id": "T0gnwb4opK6C",
         "colab_type": "code",
+        "outputId": "f24ce4f6-4864-411a-c462-1dedd87495cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "9adbfb78-4a63-47e3-91b5-f8758e1d43ef"
+        }
       },
       "source": [
         "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
@@ -45,7 +45,7 @@
         "\n",
         "print(c)"
       ],
-      "execution_count": 57,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,11 +62,11 @@
       "metadata": {
         "id": "603IfF4-qYLb",
         "colab_type": "code",
+        "outputId": "1f0a912e-9b55-4a7a-9d28-fbc3485ecc1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "2f30f9a2-d1bc-4929-eb9b-d8603d4f6982"
+        }
       },
       "source": [
         "def createMatrix(row, col, value=None):\n",
@@ -80,7 +80,7 @@
         "print(a)\n",
         "print(b)"
       ],
-      "execution_count": 69,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,11 +97,11 @@
       "metadata": {
         "id": "oKQsmkaisWws",
         "colab_type": "code",
+        "outputId": "2cc5d29e-1b5b-446c-c1b4-8c8e7a6a8ed6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1604288f-5355-4a43-bbc3-afe58f8e90b8"
+        }
       },
       "source": [
         "def dotMatrix(a, b):\n",
@@ -120,10 +120,9 @@
         "  \n",
         "  return m\n",
         "  \n",
-        "\n",
         "print(dotMatrix(a, b))"
       ],
-      "execution_count": 83,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,15 +136,61 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N82t2dt-wD63",
+        "id": "1j50YTkjr6Pk",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7b392e9d-03aa-4227-d3dc-5553b7cb40c7"
       },
       "source": [
-        ""
+        "import multiprocessing as mp\n",
+        "\n",
+        "def iterative_func(t, ac, a, b):\n",
+        "  tot = 0\n",
+        "  for i in range(ac):\n",
+        "    tot += a[t[0]][i] * b[i][t[1]]\n",
+        "  return tot\n",
+        "\n",
+        "\n",
+        "def parallelDotMatrix(a, b, pool_size=10):\n",
+        "  (ar, br) = (len(a), len(b))\n",
+        "  if ar == 0 or br == 0:\n",
+        "    raise Exception('Wrong Matrix size')\n",
+        "  (ac, bc) = (len(a[0]), len(b[0]))\n",
+        "  if ac == 0 or bc == 0 or ac != br:\n",
+        "    raise Exception('Wrong Matrix size')\n",
+        "\n",
+        "  rc = []\n",
+        "  for r in range(ar):\n",
+        "    for c in range(bc):\n",
+        "      rc.append((r, c))\n",
+        "\n",
+        "  with mp.Pool(pool_size) as pool:\n",
+        "    results = pool.starmap(iterative_func, [(t, ac, a, b) for t in rc])\n",
+        "\n",
+        "  m = createMatrix(ar, bc, 0)\n",
+        "\n",
+        "  for r in range(ar):\n",
+        "    for c in range(bc):\n",
+        "      m[r][c] = results[c+(r*ar)]\n",
+        "  \n",
+        "  return m\n",
+        "  \n",
+        "\n",
+        "print(parallelDotMatrix(a, b))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[22, 28], [49, 64]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
